--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.03.2022 08:35:04</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.03.2022 09:15:54</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,14 +7,14 @@
 <h5>Středa, 16. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Houbová polévka</strong>
+<strong>Čočková  polévka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Chilli con carne s rýží NEBO pečeným bramborem</strong>
+<strong>Cikánské kuřecí NEBO vepřové nudličky s rýží NEBO kroketami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -167,7 +167,7 @@ smaženými bramborovými lupínky a chipotle majonézou
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede se syrskymi bio olivami a bazalkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami a cuketami ( L ) 139</li><li>Peceny filet z cerstve norske tresky se syrskymi bio olivami a bazalkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami a cuketami ( L ) 169</li><li>Thajske arasidove kari s veprovym masem, bataty, lilky, ananasem a kokosovym mlekem, jasminova ryze 139</li><li>Teleci hrudi pecene na citronech a kaparach, pecene brambory, salatek 169</li><li>Pecena cervena repa s balzamikem, cizrnovy hummus, sazene vejce, arabske placky {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s holandskou omackou s celozrnnou horcici, stouchane brambory s porkem a creme fraiche, salatek z cervene repy 139</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s porkem a creme fraiche, salatek z cervene repy 169</li><li>Nam tok – thajsky salat z hoveziho steaku s matou, limetkami, cervenou cibulkou a spetkou chilli, ryzove nudle, salat z bile redkve s mrkvi 139</li><li>Grilovane seleci ribsy na pomerancich, jasminova ryze, salatek 159</li><li>Indicke birjany z basmati ryze s pecenymi bataty, halloumi a zeleninou, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
