--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.03.2022 08:34:23</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.03.2022 09:13:18</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,14 +7,21 @@
 <h5>Čtvrtek, 17. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková  polévka</strong>
+<strong>Květáková polévka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Cikánské kuřecí NEBO vepřové nudličky s rýží NEBO kroketami</strong>
+<strong>Pečené kuřecí stehno se šťouchaným bramborem a máslovou karotkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
+						</span>
+</p>
+<p>
+<strong>Pečený candát se šťouchaným bramborem a maslovou karotkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -159,7 +166,7 @@ smaženými bramborovými lupínky a chipotle majonézou
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s holandskou omackou s celozrnnou horcici, stouchane brambory s porkem a creme fraiche, salatek z cervene repy 139</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s porkem a creme fraiche, salatek z cervene repy 169</li><li>Nam tok – thajsky salat z hoveziho steaku s matou, limetkami, cervenou cibulkou a spetkou chilli, ryzove nudle, salat z bile redkve s mrkvi 139</li><li>Grilovane seleci ribsy na pomerancich, jasminova ryze, salatek 159</li><li>Indicke birjany z basmati ryze s pecenymi bataty, halloumi a zeleninou, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh se salsou z cerstvych rajcat a okurek, pecene brambory s podzimni zeleninou, salatek 139</li><li>Indonesky nasi goreng s grilovanymi krevetami, krevetovou pastou, zeleninou a vajecnymi omeletkami, salatek 175</li><li>Turecke zapecene lilky s hovezim masem, rajcaty, fazolemi a ementalem, bulgur se smazenou cibulkou, jogurtovy dip, salatek {L} 139</li><li>Hovezi ohanka na cervenem vine s korenovou zeleninou, slaninou a divokym korenim, stouchane brambory s creme fraiche 165</li><li>Thajske kari s pecenym tofu, kvetakem, kokosovym mlekem, arasidy a zeleninou, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
